// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VoiceSearch Rendering with custom template for buttonText (1) 1`] = `
<div
  className="root"
>
  <button
    className="button"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Stop",
      }
    }
    disabled={false}
    onClick={[Function]}
    title="Search by voice"
    type="button"
  />
  <div
    className="status"
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
  />
</div>
`;

exports[`VoiceSearch Rendering with custom template for buttonText (2) 1`] = `
<div
  className="root"
>
  <button
    className="button"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Start",
      }
    }
    disabled={false}
    onClick={[Function]}
    title="Search by voice"
    type="button"
  />
  <div
    className="status"
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
  />
</div>
`;

exports[`VoiceSearch Rendering with custom template for status 1`] = `
<div
  className="root"
>
  <button
    className="button"
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
    disabled={false}
    onClick={[Function]}
    title="Search by voice"
    type="button"
  />
  <div
    className="status"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<p>status: recognizing</p> <p>errorCode: </p> <p>isListening: true</p> <p>transcript: Hello</p> <p>isSpeechFinal: false</p> <p>isBrowserSupported: true</p>",
      }
    }
  />
</div>
`;

exports[`VoiceSearch Rendering with default props 1`] = `
<div
  className="root"
>
  <button
    className="button"
    dangerouslySetInnerHTML={
      Object {
        "__html": "button",
      }
    }
    disabled={false}
    onClick={[Function]}
    title="Search by voice"
    type="button"
  />
  <div
    className="status"
    dangerouslySetInnerHTML={
      Object {
        "__html": "status",
      }
    }
  />
</div>
`;
